--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,9 +1,7 @@
-.app {
-  width: 500px;
-  margin: 1em auto;
-  text-align: center;
-}
+@use 'src/styles/vars';
 
-.app img {
-  max-width: 150px;
+.app {
+  width: auto;
+  height: auto;
+  background-color: vars.$primary-color;
 }
