--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -4,7 +4,8 @@
   background-color: vars.$secondary-color;
   color: vars.$text-color;
   text-align: center;
-  padding: 10px 10px 10px 10px;
+  padding: 1rem 1rem 1rem 1rem;
+
 
   &__icons {
     display: flex;
@@ -18,10 +19,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0px 20px 0px ;
+    margin: 2rem 0rem 2rem 0rem;
 
     &__legal-mentions {
-      margin: 0px 50px 0px 50px ;
+      margin: 0rem 2rem 0rem 0rem;
     }
   }
 }
