--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,7 +2,6 @@
 
 .header {
   background-color: vars.$main-color;
- 
 
   &--top{
     display: flex;
@@ -80,52 +79,75 @@
   }
 
   &--nav{
-    margin-top: 0.5em;
-    padding: 1em;
+    width: auto;
     background-color: vars.$secondary-color;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
 
-    &__burger{
-      background: transparent;
-      border: none;
-      color: white;
+    &__burger:hover{
+      border: white;
     }
+    
 
     &__list{
-
+      display: flex;
+      flex-wrap: wrap;
+      
+     
     }
 
     &__item{
       display: inline;
-      margin: 0em 1em;
+      width: auto;
+      margin: 1rem 1rem;
       color: vars.$text-color;
  
     }
   }
+  
+};
 
-}
+.header--container {
+  position: relative;
+  transform: translate(-13%);
+  @media (max-width : vars.$pad) {
+    transform: translate(-18%);
+    ;
+    }
+    @media (max-width : vars.$phone) {
+      transform: translate(-28%);
 
-.burger-bar,
-.burger-bar::before,
-.burger-bar::after {
-  display: block;
-  width:40px;
-  height:3px;
-  border-radius: 3px;
-  background:white ;
-}
-.burger-bar::before,
-.burger-bar::after {
-  content:"";
-}
+      }
+  .header--nav__burgertranslation{
 
-.burger-bar::before {
-  transform: translateY(-12px);
-}
+    
+      background-color: vars.$secondary-color;
+      opacity: 0.7;
+      width: 15%;
+      
+      position: absolute;
+      
+      @media (max-width : vars.$pad) {
+        width: 20%;
+        }
+        @media (max-width : vars.$phone) {
+          width: 30%;
+          }
 
-.burger-bar::after {
-  transform: translateY(12px);
-}
+      &--list {
+        padding-bottom: vars.$gutter;
+
+      }
+
+      &--item {
+        color: vars.$text-color;
+        padding-top: vars.$gutter;
+        text-align: center;
+      }
+
+    }
+
+  }
+
+
+
