--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -106,10 +106,23 @@
   }
   
 };
-
+.header--container__closed {
+position: relative;
+}
 .header--container {
   position: relative;
-  transform: translate(-13%);
+  // transform: translate(-0%);
+  // @media (max-width : vars.$pad) {
+  //   transform: translate(-18%);
+  //   ;
+  //   }
+  //   @media (max-width : vars.$phone) {
+  //     transform: translate(-28%);
+
+  //     }
+
+  &__closed{
+transform: translate(-13%);
   @media (max-width : vars.$pad) {
     transform: translate(-18%);
     ;
@@ -118,6 +131,9 @@
       transform: translate(-28%);
 
       }
+
+  }
+    
   .header--nav__burgertranslation{
 
     
