--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -106,29 +106,19 @@
   }
   
 };
-.header--container__closed {
-position: relative;
-}
+
 .header--container {
   position: relative;
-  // transform: translate(-0%);
-  // @media (max-width : vars.$pad) {
-  //   transform: translate(-18%);
-  //   ;
-  //   }
-  //   @media (max-width : vars.$phone) {
-  //     transform: translate(-28%);
-
-  //     }
-
+  transition: transform 0.4s ease-in;
+  
   &__closed{
-transform: translate(-13%);
+transform: translate(-15%);
   @media (max-width : vars.$pad) {
-    transform: translate(-18%);
+    transform: translate(-20%);
     ;
     }
     @media (max-width : vars.$phone) {
-      transform: translate(-28%);
+      transform: translate(-30%);
 
       }
 
