--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -9,17 +9,44 @@ flex-wrap: wrap;
 
   &__content {
     background-color: pink;
-    margin: 2rem 1rem 2rem 1rem;
-    width: 50vw;
+    margin: 1rem 1rem 1rem 1rem;
+
+    &__head {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      border-bottom: 0.1rem solid vars.$secondary-color;
+      margin: 1rem 1rem 1rem 1rem;
+
+      &__title {
+        font-size: 1.5rem;
+      }
+
+      &__price {
+
+      }
+    }
 
     &__article {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+      padding: 0.5rem 0rem 0.5rem 0rem;
+      border-bottom: 0.1rem solid vars.$secondary-color;
 
       &__picture {
-        width: 15vw;
-        height: 15vh;
+        width: 50%;
+        height: 50%;
       }
 
       &__description {
+        width: 30%;
+        margin-left: 1rem;
+      }
+
+      &__value {
+
 
       }
 
@@ -27,12 +54,19 @@ flex-wrap: wrap;
 
       }
 
-      &__quatity {
-
+      &__quantity {
+        background-color: white;
+        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
       }
 
       &__delete {
 
+      }
+
+      &__total {
+        display: flex;
+        justify-content: flex-end;
+        margin: 0rem 1rem 0.5rem 0rem;
       }
 
     }
@@ -40,9 +74,9 @@ flex-wrap: wrap;
   }
 
   &__pay {
+
 background-color: yellow;
-width: 30vw;
-margin: 2rem 1rem 2rem 1rem;
+margin: 1rem 1rem 1rem 1rem;
 
     &__description {
 
