feature injection API data in description components and transition CSS done

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -10,4 +10,6 @@ $gutter: 1rem;
 $desktop4k: 1440px;
 $desktop: 1024px;
 $phone: 450px;
-$pad: 750px
+$pad: 750px;
+$middle: 950px;
+$large: 1800px;
