--- a/src/components/Header/Navbar/styles.scss
+++ b/src/components/Header/Navbar/styles.scss
@@ -1,5 +1,11 @@
 @use 'src/styles/vars';
 
+// .header--nav__item:active {
+// background-color: yellowgreen;
+
+  
+// }
+
 .header--nav__item::first-letter {
   text-transform: uppercase;
 
