--- a/src/components/CardArticle/styles.scss
+++ b/src/components/CardArticle/styles.scss
@@ -1,11 +1,19 @@
 @use 'src/styles/vars';
 .card--article {
   background-color: vars.$text-color;
-  margin: 1rem 0.5rem 1rem 0.5rem;
+  width: 100%;
+  border-radius: 15px;
+  transition: all 0.5s ease-in-out;
+
 
   &__title{
-    padding: 1rem 1rem 0em 1rem;
-    font-size: 2em;
+    font-size: 1.5em;
+    text-align: center;
+    padding: vars.$gutter;
+    color: vars.$secondary-color;
+    font-weight: bold;
+    margin: 0;
+    
   }
 
   &--container {  
@@ -23,17 +31,27 @@
 
 
   &__picture {
-    max-width: 40vw;
-    max-height: 40vh;
+    // max-width: 40vw;
+    // max-height: 40vh;
     padding: 1rem;
+    border-radius: 25px;
 
-    @media (min-width : vars.$pad) {
-      max-width:30vw;
-      max-height: 30vh;
-      }
-    @media (min-width: vars.$desktop){
-      max-width:20vw;
-      max-height: 20vh;
-    }
+    // @media (min-width : vars.$pad) {
+    //   max-width:30vw;
+    //   max-height: 30vh;
+    //   }
+    // @media (min-width: vars.$desktop){
+    //   max-width:20vw;
+    //   max-height: 20vh;
+    // }
   }
 }
+
+.card--article:hover {
+  background-color: orange;
+  opacity: 0.8;
+  &__title {
+    color: white;
+  }
+}
+
