--- a/src/components/CardCategory/styles.scss
+++ b/src/components/CardCategory/styles.scss
@@ -4,6 +4,8 @@
   margin: 10px 0px 10px 0px;
   border-radius: 15px;
   max-width: 100%;
+  transition: all 0.5s ease-in-out;
+
   
 
   p {
@@ -12,6 +14,7 @@
     color: vars.$secondary-color;
     font-weight: bold;
     font-size: 1.5em;
+    margin: 0;
     
   }
 
@@ -19,6 +22,9 @@
     // max-width:40vw;
     // max-height: 40vh;
     padding: 1rem;
+    
+    border-radius: 25px;
+    
 
     // @media (min-width : vars.$pad) {
     //   max-width:30vw;
@@ -32,7 +38,7 @@
 }
 
 .card-category:hover {
-  background-color: black;
+  background-color: vars.$main-color;
   opacity: 0.8;
   p {
     color: white;
