--- a/src/components/CardCategory/styles.scss
+++ b/src/components/CardCategory/styles.scss
@@ -4,7 +4,7 @@
   margin: 10px 0px 10px 0px;
   border-radius: 15px;
   max-width: 100%;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s linear;
 
   
 
