--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -30,25 +30,25 @@ width: 100vw;
     }
     
 
-    &__category {
-      background-color: vars.$text-color;
-      margin: 10px 0px 10px 0px;
+    // &__category {
+    //   background-color: vars.$text-color;
+    //   margin: 10px 0px 10px 0px;
 
-      &__picture {
-        max-width:40vw;
-        max-height: 40vh;
-        padding: 1rem 1rem 1rem 1rem;
+      // &__picture {
+      //   max-width:40vw;
+      //   max-height: 40vh;
+      //   padding: 1rem 1rem 1rem 1rem;
 
-        @media (min-width : vars.$pad) {
-          max-width:30vw;
-          max-height: 30vh;
-          }
-        @media (min-width: vars.$desktop){
-          max-width:25vw;
-          max-height: 25vh;
-        }
-      }
-    }
+      //   @media (min-width : vars.$pad) {
+      //     max-width:30vw;
+      //     max-height: 30vh;
+      //     }
+      //   @media (min-width: vars.$desktop){
+      //     max-width:25vw;
+      //     max-height: 25vh;
+      //   }
+      // }
+    // }
   }
 
   &__articles {
@@ -70,24 +70,24 @@ width: 100vw;
       text-shadow: 1px 1px 0px vars.$secondary-color, 0 0 1em vars.$main-color, 0 0 0.2em white;
     }
 
-    &__article {
-      background-color: vars.$text-color;
-      margin: 1rem 0.5rem 1rem 0.5rem;
+    // &__article {
+    //   background-color: vars.$text-color;
+    //   margin: 1rem 0.5rem 1rem 0.5rem;
 
-      &__picture {
-        max-width: 40vw;
-        max-height: 40vh;
-        padding: 1rem 1rem 1rem 1rem;
+    //   &__picture {
+    //     max-width: 40vw;
+    //     max-height: 40vh;
+    //     padding: 1rem 1rem 1rem 1rem;
 
-        @media (min-width : vars.$pad) {
-          max-width:30vw;
-          max-height: 30vh;
-          }
-        @media (min-width: vars.$desktop){
-          max-width:20vw;
-          max-height: 20vh;
-        }
-      }
-    }
+    //     @media (min-width : vars.$pad) {
+    //       max-width:30vw;
+    //       max-height: 30vh;
+    //       }
+    //     @media (min-width: vars.$desktop){
+    //       max-width:20vw;
+    //       max-height: 20vh;
+    //     }
+    //   }
+    // }
   }
 }
