--- a/src/components/CardArticle/styles.scss
+++ b/src/components/CardArticle/styles.scss
@@ -3,7 +3,7 @@
   background-color: vars.$text-color;
   width: 100%;
   border-radius: 15px;
-  transition: all 0.5s linear
+  transition: background-color 0.5s linear
 
   &__title{
     font-size: 1.5em;
