--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -63,6 +63,20 @@
           height: 24px;
           }
     }
+    &__usernav {
+      position: absolute;
+      background-color: white;
+      border: 2px solid black;
+      border-radius: 2.5%;
+      top: 5rem;
+      right: 5.1rem;
+      padding: 1rem 1rem;
+
+      &__disconnect {
+        
+      }
+    }
+    
     &__cart{
       background-color: whitesmoke;
       border-radius: 1rem;
@@ -94,8 +108,7 @@
       flex-wrap: wrap;
       @media (max-width : vars.$phone) {
         display: none;
-        }
-      
+        }   
      
     }
 
