features- change button of the nav when user is login to a simple li

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -129,13 +129,12 @@
         text-decoration: underline;
       }
       &__disconnect {
-        background-color: vars.$primary-color;
+        margin: 0.5rem 0rem;
         color: black;
       }
       &__disconnect:hover {
         color: coral;
         text-decoration: underline;
-        background-color: vars.$secondary-color;
       }
     }
     
