--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -83,6 +83,7 @@
     &__user{
       background-color: whitesmoke;
       border-radius: 1rem;
+      cursor: pointer;
       @media (max-width : vars.$pad) {
         width: 32px;
         height: 32px;
