--- a/src/components/Header/Navbar/styles.scss
+++ b/src/components/Header/Navbar/styles.scss
@@ -1,14 +1,21 @@
 @use 'src/styles/vars';
 
-.header--nav__item:hover {
-background-color: vars.$secondary-color;
-border: 0.1rem solid white;
+.header--nav__item {
+  padding: 0.5rem;
+  display: inline-block;
+  width: auto;
+  margin: 0.5rem;
+  color: vars.$text-color;
 }
+  .header--nav__item:hover {
+    
+    border: 0.1rem solid rgb(255, 255, 255, 0.5);
+    border-radius: 10px;
+    }
+
 
 .header--nav__item::first-letter {
   text-transform: uppercase;
 }
 
-.header--nav__item {
-  padding: 0.6rem 0.6rem;
-}
+
