--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -16,8 +16,7 @@
       .dropdown {
         display: block;
         position: absolute;
-        background-color: white;
-        opacity: 0.8;
+        background-color: rgb(255, 255, 255, 0.9);
         width: 59%;
         margin: auto;
         padding: 2*vars.$gutter;
@@ -47,6 +46,7 @@
       width: 90%;
       border-radius: 1rem 0rem 0rem 1rem;
       border: 0;
+      background-color: rgb(245, 245, 245, 0.9);
       @media (max-width : vars.$pad) {
         width: 75%;
         }
@@ -160,27 +160,23 @@
     display: flex;
     align-items: center;
 
-    &__burger:hover{
-      border: white;
-    }
+    // &__burger:hover{
+    //   // border: white;
+    // }
     
-
+    
     &__list{
       display: flex;
       flex-wrap: wrap;
-      @media (max-width : vars.$phone) {
+      @media (max-width : vars.$pad) {
         display: none;
         }   
      
     }
 
-    &__item{
-      display: inline;
-      width: auto;
-      margin: 1rem 1rem;
-      color: vars.$text-color;
- 
-    }
+      
+
+   
     &__user {
       display: contents;
       width: auto;
@@ -195,7 +191,7 @@
   position: relative;
   transition: transform 0.2s ease-in;
   z-index: 1;
-  @media (max-width : vars.$phone) {
+  @media (max-width : vars.$pad) {
     transition: transform 0s ease-in
 
     }
@@ -204,12 +200,12 @@
 
   
   &__closed {
-transform: translate(-30%);
+transform: translate(-40%);
   // @media (max-width : vars.$pad) {
   //   transform: translate(-20%);
   //   ;
   //   }
-    @media (max-width : vars.$phone) {
+    @media (max-width : vars.$pad) {
       transform: translate(-100%);
 
       }
@@ -222,17 +218,13 @@ transform: translate(-30%);
   .header--nav__burgertranslation{
 
     
-      background-color: vars.$secondary-color;
-      opacity: 0.7;
-      width: 30%;
+      background-color: rgb(35, 47, 62, 0.9);
+      width: 40%;
+      border-bottom-right-radius: 15px;
 
       position: absolute;
-      // transition: width 0s ease-in;
       
-      // @media (max-width : vars.$pad) {
-      //   width: 20%;
-      //   }
-        @media (max-width : vars.$phone) {
+        @media (max-width : vars.$pad) {
           width: 100%;
           }
       
@@ -253,8 +245,7 @@ transform: translate(-30%);
         font-size: 1.7em;
         font-weight: bold;
         padding: 2*vars.$gutter 0;
-        text-shadow: 1px 1px 2px whitesmoke, 0 0 0.8em white, 0 0 0.2em white;
-        opacity: 2;
+        
           @media (max-width : vars.$middle) {
             font-size: 1.5em;
         }
