--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,12 @@ $secondary-color: #232F3E;
 $third-color: #B8B9B9;
 $main-color: #131921;
 
+$purple: hsl(245, 35%, 22%);
+$l-purple: #332F63;
+$t-purple: #8C8AA7;
+$pink: #FF5E65;
+$white: #fff;
+
 $text-color: white;
 
 $gutter: 1rem;
