--- a/src/components/Article/ListArticle/style.scss
+++ b/src/components/Article/ListArticle/style.scss
@@ -5,9 +5,9 @@
 
 
 .slider--container {
-  border: 1px solid grey;
-  border-radius: 10px;
-  margin-top: 2*vars.$gutter;
+  border-top: 3px solid vars.$secondary-color;
+  padding-top: 2em;
+  margin-top: 3em;
   display: flex;
   justify-content: space-evenly;
   
@@ -29,7 +29,7 @@
     box-shadow: 0 0 10px #555;
     width: 20%;
     height: 20%;
-    text-overflow: ellipsis;
+    // text-overflow: ellipsis;
     overflow: hidden;
     transition: background-color 0.5s linear;
 
@@ -57,9 +57,15 @@
     }
     &--description {
       font-size: 1.3rem;
+      text-overflow: ellipsis;
+
+      // display: inline-block;
+      overflow-wrap: break-word;
       white-space: nowrap;
       padding: 0.3em 0 0.3em 0;
       color: vars.$secondary-color;
+      width: 100%;
+      height: 100px;
 
       @media (max-width : vars.$middle) {
           
