--- a/src/components/CardArticle/styles.scss
+++ b/src/components/CardArticle/styles.scss
@@ -8,14 +8,14 @@
     width: 100%;
     border-radius: 15px;
     transition: all 0.5s linear;
-    // margin: 1em;
+    box-shadow: 1px 1px 15px black;
 
     &__title{
-      font-size: 1.5em;
+      font-size: 1em;
+      text-transform: capitalize;
       text-align: center;
-      padding: vars.$gutter;
+      padding: 0 0.5em 0.5em;
       color: vars.$secondary-color;
-      font-weight: bold;
       margin: 0;
     
     }
@@ -29,15 +29,23 @@
       }
 
       &__price {
-        padding: 1em;
+        padding: 0 1em 0.5em;
+        margin: auto;
+        color: vars.$secondary-color;
+        font-size: 2em;
+        font-weight: bold;
+
+
       }
     }
 
 
     &__picture {
     
-      padding: 1rem;
-      border-radius: 25px;
+      padding: 0.5em ;
+      border-radius: 20px;
+      width: 100%;
+      max-height: 200px;
 
     }
     &__title {
@@ -48,8 +56,8 @@
   }
 
   .card--article:hover {
-    background-color: orange;
-    opacity: 0.8;
+    background-color: rgb(255, 165, 0, 0.85);
+    
     .card--article__title {
       color: white;
     }
