--- a/src/components/Error/styles.scss
+++ b/src/components/Error/styles.scss
@@ -1,11 +1,7 @@
 
+@use 'src/styles/vars';
+
 @import url(https://fonts.googleapis.com/css?family=Ubuntu);
-//variables
-$purple: #28254C;
-$l-purple: #332F63;
-$t-purple: #8C8AA7;
-$pink: #FF5E65;
-$white: #fff;
 
 html, body {
   font-family: 'Ubuntu';
@@ -17,7 +13,7 @@ html, body {
 
 .error {
 
-background-color: $l-purple;
+background-color: vars.$l-purple;
 
 
 .box {
@@ -27,7 +23,7 @@ background-color: $l-purple;
   margin:auto;
   // max-height: 600px;
   // min-height: 450px;
-  background: $l-purple;
+  background: vars.$l-purple;
   border-radius: 20px;
   position: relative;
   // left: 50%;
@@ -50,7 +46,7 @@ background-color: $l-purple;
           content: '';
           width: 12px;
           height: 4px;
-          background: $white;
+          background: vars.$white;
           position: relative;
           border-radius: 5px;
           bottom: 65px;
@@ -71,7 +67,7 @@ background-color: $l-purple;
         width: 18px;
         border: 4px solid;
         border-radius: 50%;
-        border-color: $white;
+        border-color: vars.$white;
         opacity: .2;
         animation: shine 4s ease-in-out 1.3s infinite;
       }
@@ -83,7 +79,7 @@ background-color: $l-purple;
           content: '';
           width: 12px;
           height: 4px;
-          background: $white;
+          background: vars.$white;
           position: absolute;
           border-radius: 5px;
           top: 5px;
@@ -104,7 +100,7 @@ background-color: $l-purple;
           content: '';
           width: 15px;
           height: 4px;
-          background: $white;
+          background: vars.$white;
           position: absolute;
           border-radius: 5px;
           top: 10px;
@@ -125,7 +121,7 @@ background-color: $l-purple;
         width: 12px;
         border: 3px solid;
         border-radius: 50%;
-        border-color: $white;
+        border-color: vars.$white;
         opacity: .2;
         animation: shine 1.7s ease-in-out 7s infinite;
       }
@@ -137,7 +133,7 @@ background-color: $l-purple;
           content: '';
           width: 15px;
           height: 4px;
-          background: $white;
+          background: vars.$white;
           position: absolute;
           border-radius: 5px;
           bottom: 65px;
@@ -153,7 +149,7 @@ background-color: $l-purple;
     }
 
     .box__ghost-container {
-      background: $white;
+      background: vars.$white;
       width: 100px;
       height: 100px;
       border-radius: 100px 100px 0 0;
@@ -172,7 +168,7 @@ background-color: $l-purple;
         .box__eye-left {
           width: 12px;
           height: 12px;
-          background: $l-purple;
+          background: vars.$l-purple;
           border-radius: 50%;
           margin: 0 10px;
           position: absolute;
@@ -181,7 +177,7 @@ background-color: $l-purple;
         .box__eye-right {
           width: 12px;
           height: 12px;
-          background: $l-purple;
+          background: vars.$l-purple;
           border-radius: 50%;   
           margin: 0 10px;
           position: absolute;
@@ -202,12 +198,12 @@ background-color: $l-purple;
           top:-10px;
           height:20px;
           border-radius:100%;
-          background-color: $white;
+          background-color: vars.$white;
 
           &:nth-child(2n) {
             top: -12px;
             margin: 0 -0px;
-            border-top: 15px solid $l-purple;
+            border-top: 15px solid vars.$l-purple;
             background: transparent;
           }
         }
@@ -230,7 +226,7 @@ background-color: $l-purple;
     transform: translateX(-50%);
     
     .box__description-container {
-      color: $white;
+      color: vars.$white;
       text-align: center;
       width: 200px;
       font-size: 16px;
@@ -243,7 +239,7 @@ background-color: $l-purple;
       }
 
       .box__description-text {
-        color: $t-purple;
+        color: vars.$t-purple;
         line-height: 30px;
         margin-top: 20px;
         font-size: 1.2em;
@@ -253,13 +249,13 @@ background-color: $l-purple;
     .box__button {
       display: block;
       position: relative;
-      background: $pink;
+      background: vars.$pink;
       border: 1px solid transparent;
       border-radius: 50px;
       height: 50px;
       text-align: center;
       text-decoration: none;
-      color: $white;
+      color: vars.$white;
       line-height: 50px;
       font-size: 18px;
       padding: 0 70px;
@@ -274,17 +270,17 @@ background-color: $l-purple;
         position: absolute;
         width: 20px;
         height: 100px;
-        background: $white;
+        background: vars.$white;
         bottom: -25px;
         left: 0;
-        border: 2px solid $white;
+        border: 2px solid vars.$white;
         transform: translateX(-50px) rotate(45deg);
         transition: transform .5s ease;
       }
       
       &:hover {
         background: transparent;
-        border-color: $white;
+        border-color: vars.$white;
         
         &:before {
           transform: translateX(250px) rotate(45deg);
