--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -12,7 +12,7 @@ width: 100vw;
 }
 
   &__categories {
-    background: linear-gradient(vars.$third-color,vars.$primary-color);
+    background: white;
     padding: 1rem 1rem 2rem 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -22,10 +22,9 @@ width: 100vw;
     &--title {
       width: 100%;
       text-align: center;
-      text-transform: uppercase;
-      font-size: 3em;
+      text-transform: capitalize;
+      font-size: 2.5em;
       color: vars.$secondary-color;
-      text-shadow: 1px 1px 0px vars.$secondary-color, 0 0 1em vars.$main-color, 0 0 0.2em white;
     
     }
     
@@ -34,7 +33,7 @@ width: 100vw;
   }
 
   &__articles {
-    background-color: vars.$primary-color;
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -43,13 +42,11 @@ width: 100vw;
     &--title {
       width: 100%;
       border-top: 3px solid vars.$main-color;
-      border-radius: 5px;
       padding-top: 1em;
       text-align: center;
-      text-transform: uppercase;
-      font-size: 3em;
+      text-transform: capitalize;
+      font-size: 2.5em;
       color: vars.$secondary-color;
-      text-shadow: 1px 1px 0px vars.$secondary-color, 0 0 1em vars.$main-color, 0 0 0.2em white;
     }
 
     
